# jargon-master-plugin

./: CMakeLists.txt  MyModule.cpp  Readme.md  test.cpp
checks/: HSCAA_1_2_Check.cpp  HSCAA_1_2_Check.h  HSCAA_2_1_Check.cpp  HSCAA_2_1_Check.h  HSCAA_2_2_Check.cpp  HSCAA_2_2_Check.h  HSCAA_2_3_Check.cpp  HSCAA_2_3_Check.h  HSCAA_2_4_Check.cpp  HSCAA_2_4_Check.h  HSCAG_4_2_Check.cpp  HSCAG_4_2_Check.h  HSCAI_2_1_Check.cpp  HSCAI_2_1_Check.h  HSCAI_2_2_Check.cpp  HSCAI_2_2_Check.h  HSCAI_2_3_Check.cpp  HSCAI_2_3_Check.h  HSCAN_3_1_Check.cpp  HSCAN_3_1_Check.h  HSCAN_3_2_Check.cpp  HSCAN_3_2_Check.h  HSCAP_1_1_Check.cpp  HSCAP_1_1_Check.h  HSCAS_1_1_Check.cpp  HSCAS_1_1_Check.h  HSCAV_6_2_Check.cpp  HSCAV_6_2_Check.h  HSCAV_6_3_Check.cpp  HSCAV_6_3_Check.h  HSCBC_6_3_Check.cpp  HSCBC_6_3_Check.h
